--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,23 @@
   </head>
 
   <body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/students">Index</a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+
+    <ul class="navbar-nav">
+
+      <li class="nav-item">
+        <a class="nav-link" href="pages/landing">Landing</a>
+      </li>
+
+    </ul>
+  </div>
+</nav>
+
+  <div class="container">
     <%= yield %>
+    </div>
   </body>
 </html>
